@@ -9,12 +9,9 @@ module Command.Add where
 
 import Control.Monad.State (liftIO)
 import System.Posix.Files
-import System.Directory
 
 import Command
 import qualified Annex
-import Utility
-import Locations
 import qualified Backend
 import LocationLog
 import Types
@@ -42,11 +39,9 @@ perform (file, backend) = do
 
 cleanup :: FilePath -> Key -> SubCmdCleanup
 cleanup file key = do
+	moveAnnex key file
 	logStatus key ValuePresent
-	g <- Annex.gitRepo
-	let dest = annexLocation g key
-	liftIO $ createDirectoryIfMissing True (parentDir dest)
-	liftIO $ renameFile file dest
+
 	link <- calcGitLink file key
 	liftIO $ createSymbolicLink link file
 	Annex.queue "add" [] file
